[package]
name = "smart-contract-transparency"
version = "0.1.0"
authors = ["Martin Charles <martincharles07@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
nom = "7.0.0-alpha1"
hex = "0.4.3"
anyhow = "1.0.41"
